[DC] Allow forward
Allow forward had following issues, they are fixed with this commit:
1. UI for user notification and action (Deny/Grant access)
2. When 2nd message is sent, it will not appear
3. Username and Email to understand whom to (deny/grant)
4. Added libpriv for x86_64 and arm64_v8a

Bug: #37
Test:
    Tested on 3 mobile setup to test forward case.

--- a/src/main/res/xml/preferences_advanced.xml
+++ b/src/main/res/xml/preferences_advanced.xml
@@ -33,6 +33,12 @@
             android:dialogTitle="Enter minutes"
             android:inputType="number"/>
 
+        <org.thoughtcrime.securesms.components.SwitchPreferenceCompat
+            android:defaultValue="false"
+            android:key="pref_notify_forward_request_enabled"
+            android:summary="@string/pref_notify_forward_request_explain"
+            android:title="@string/pref_notify_forward"/>
+
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/pref_experimental_features">
 
