DC] Android Backup Support Partial code done. Need to call native method inside ChatsPreferenceFragment.java ->  startPrvBackUp -> doInBackground
Bug: #60
Work in progress

--- a/src/main/res/xml/preferences_chats.xml
+++ b/src/main/res/xml/preferences_chats.xml
@@ -49,6 +49,8 @@
     <PreferenceCategory android:title="@string/pref_backup">
         <Preference android:key="pref_backup"
             android:title="@string/export_backup_desktop"/>
+        <Preference android:key="pref_priv_backup"
+            android:title="Privitty Backup"/>
     </PreferenceCategory>
 
 </PreferenceScreen>
